duvet/src/citation/snapshots/duvet__citation__token__tests__empty.snap
---
source: duvet/src/citation/token.rs
assertion_line: 162
expression: "parser.tokenize(&arcstr::literal!(\"\")).collect::<Vec<_>>()"

---
[]
